add queue length to dashboard

--- a/feedreader/media/assets/dashboard/html/home.html
+++ b/feedreader/media/assets/dashboard/html/home.html
@@ -33,6 +33,19 @@
 			</div><!-- ./col -->
 			<div class="col-lg-3 col-xs-6">
 				<!-- small box -->
+				<div class="small-box bg-aqua">
+					<div class="inner">
+						<h3>{[{indexInfo.home_queue.cnt_post}]}</h3>
+						<p>مطالب در صف</p>
+					</div>
+					<div class="icon">
+						<i class="ion ion-bag"></i>
+					</div>
+					<a href="#" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
+				</div>
+			</div><!-- ./col -->
+			<div class="col-lg-3 col-xs-6">
+				<!-- small box -->
 				<div class="small-box bg-green">
 					<div class="inner">
 						<h3>{[{indexInfo.today_view_pages.cnt_view_pages}]}</h3>
