--- a/feedreader/media/assets/dashboard/html/home.html
+++ b/feedreader/media/assets/dashboard/html/home.html
@@ -41,7 +41,7 @@
 					<div class="icon">
 						<i class="ion ion-bag"></i>
 					</div>
-					<a href="#" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
+					<a href="/pin/queue/" target="_blank" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
 				</div>
 			</div><!-- ./col -->
 			<div class="col-lg-3 col-xs-6">
